# cloud-submit

./: .gitignore  README.md  pyproject.toml
docs/examples/aws/src/: fit.py  generate.py  parameters.py
docs/examples/aws/src/csub/: build_config.py
docs/examples/aws/userconfig/: template.yaml
docs/examples/basic/src/: fit.py  generate.py
docs/examples/basic/src/csub/: build_config.py
docs/examples/basic/userconfig/: template.yaml
docs/examples/local-linreg/: linreg.py
docs/examples/local-linreg/src/: fit.py  generate.py
docs/examples/local-linreg/src/csub/: build_config.py
docs/examples/multi-worker/src/: fit.py  generate.py  parameters.py
docs/examples/multi-worker/src/csub/: build_config.py
docs/examples/multi-worker/userconfig/: template.yaml
src/cloud_submit/: __init__.py  cli.py  config.py  controller.py  environment_handler.py  images.py  run_local.py  utils.py
src/cloud_submit/environments/: handler.py
src/cloud_submit/environments/local/: environment_handler.py  execution_handler.py
src/cloud_submit/envs/aws/: __init__.py  local_environment_handler.py  local_execution_handler.py  remote_environment_handler.py  remote_execution_handler.py  s3_tools.py
src/cloud_submit/envs/local/: environment_handler.py
src/cloud_submit/execution/: base_execution_handler.py  base_handler.py  config.py  execute.py  json_io.py  utils.py
