[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-submit"
version = "0.0.0"
authors = [
  { name="Martin Wiebusch" },
]
description = "A tool for building processing pipelines in Python and executing them locally or in the cloud."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "pyyaml",
]

[project.scripts]
csub = "cloud_submit.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
